# graphgenerator-v2

./: CMakeLists.txt  LICENSE  README.md  main.cpp
models/: exp_10k_model.m1  exp_model.m1  exp_offset_10k_model.m1  exp_offset_model.m1  interm_10k_model.m1  interm_model.m1  norm_10k_model.m1  norm_model.m1  uniform_10k_model.m1  uniform_model.m1
scripts/: scaling_test.s1  scaling_test_template.s1
src/: Generator.cpp  GenericGraphReader.cpp  TSVReader.cpp  graphgenerator_types.h  m1ModelFormat.cpp  s1ScriptFormat.cpp
